--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#使用开发模式的配置文件
+spring.profiles.active=dev
 
+#配置Thymeleaf
+#是否开启缓存
+spring.thymeleaf.cache=false
+#检查模板是否存在 默认为true
+spring.thymeleaf.check-template=true
+#检查模板位置是否存在
+spring.thymeleaf.check-template-location=true
+#模板的文件编码
+spring.thymeleaf.encoding=UTF-8
+#模板文件位置
+spring.thymeleaf.prefix=classpath:/templates/
+#Content-Type配置
+spring.thymeleaf.servlet.content-type=text/html
+#模板文件后缀
+spring.thymeleaf.suffix=.html
+
+#配置https
+server.ssl.key-store=sang.p12
+server.ssl.key-alias=tomcathttps
+server.ssl.key-store-password=123456
