--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,10 @@ server.servlet.session.timeout=30m
 server.servlet.context-path=/boke
 server.tomcat.uri-encoding=UTF-8
 server.tomcat.max-threads=500
+
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/book?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+mybatis.mapper-locations=classpath:**/*.xml
