整合Restful并使用热部署

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,5 +9,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/book?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-
+#获取mapper.xml
 mybatis.mapper-locations=classpath:**/*.xml
+#定义监控资源
+spring.devtools.restart.exclude=static/**
