--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.1.1</version>
@@ -88,6 +94,7 @@
 			<version>4.7.0</version>
 			<scope>test</scope>
 		</dependency>
+
 
 	</dependencies>
 
