--- a/application.properties
+++ b/application.properties
@@ -20,6 +20,9 @@ spring.thymeleaf.suffix=.html
 
 
 #配置https
+#密钥文件名
 server.ssl.key-store=sang.p12
+#密钥别名
 server.ssl.key-alias=tomcathttps
+#密码
 server.ssl.key-store-password=123456
