--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,21 @@
-server.port=8081
+#由于使用了spring-boot-starter-web  所以默认是使用tomcat服务器
+#tomcat端口号
+server.port=9527
+#错误跳转页面
 server.error.path=/error
+#session失效时间30分钟  不写单位默认为秒 如果是秒的话时间会被转化成一个不超过所配置秒数的最大分钟数
 server.servlet.session.timeout=30m
+#项目名称，不配置的话默认是/
 server.servlet.context-path=/boke
+#请求编码
 server.tomcat.uri-encoding=UTF-8
+#最大线程数
 server.tomcat.max-threads=500
-
+#日志存放位置
+server.tomcat.basedir=/home/sang/tmp
+#数据库连接池
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#数据库链接地址
 spring.datasource.url=jdbc:mysql://localhost:3306/book?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
